@@ -1,3 +1,7 @@
+2003-12-15  Olli Helenius  <liff@iki.fi>
+
+	* load-graph.c, main.c: Also get rid of deprecated GDK functions.
+
 2003-12-14  Kevin Vandersloot
 	
 	* load-graph.c, properties.c: Use non deprecated gtk funtions. Fixes
